@@ -1,5 +1,6 @@
 [SNAPSHOT]
  * create abstract HTTP Client layer to support different HTTP clients as plugins (AHC and Ning support becames maven submodules)
+ * remove changing global JVM property http.keepAlive, deprecate controlling this property inside of ScribeJava (thanks to wldaunfr and rockihack)
 
 [2.8.1]
  * add Salesforce sandbox API support
